--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,12 +35,10 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/MartDemo
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.23.jar=src\\mysql-connector-java-5.1.23.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.PostgreSQLDriver.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.23.jar}
+    ${libs.PostgreSQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
